# dormammu

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  daemonize.json.example  daemonize.mixed-skill-resolution.example.json  daemonize.named-skill.example.json  daemonize.phase-specific-clis.example.json  dormammu.json.example  install.sh  pyproject.toml  setup.sh
.agents/: AGENTS.md  README.md
.agents/rules/: designer-runtime.md  evaluator-final.md  planner-runtime.md
.agents/templates/: DASHBOARD.md  DECISIONS.md  DEV_NOTES.md  GOAL.md  REVIEW.md  TEST_PLAN.md
.agents/workflows/: recovery-loop.md
.dev/: DASHBOARD.md  PLAN.md  TASKS.md  WORKFLOWS.md  session.json  workflow_state.json
.github/workflows/: release.yml
agents/: AGENTS.md
agents/rules/: committer-runtime.md  developer-runtime.md  evaluator-check-plan.md  evaluator-final.md  planner-runtime.md  refiner-runtime.md  reviewer-runtime.md  (+1 more)
config/: daemonize.json.example  daemonize.mixed-skill-resolution.example.json  daemonize.named-skill.example.json  dormammu.json.example
docs/: ANLAYSIS.md  BASELINE.md  GUIDE.md  PLAN.md  PLAN_ko.md  ROADMAP.md  analysis-tooling.md  config-resolvers.md  daemonize-design.md  graphify-review.md  lifecycle-events.md  operator-entrypoints.md  python-to-typescript-porting-status.md  result-model.md  role-taxonomy.md  runner-results.md  state-projection.md  typescript-control-plane-roadmap.md
frontend/: README.md  app.css  app.js  index.html  package-lock.json  package.json
runtime/: package-lock.json  package.json  tsconfig.json
scripts/: dev.sh  graphify_review.py  install.sh  sync-agents.sh  verify-agents-sync.sh  verify-baseline.sh
tests/: test_agent_cli_adapter.py  test_agent_manifest_discovery.py  test_agent_manifest_loader.py  test_agent_manifests.py  test_agent_permissions.py  test_agent_profiles.py  test_app_ui.py  test_artifacts.py  test_cli.py  test_cli_managed_timeout.py  test_command_builder.py  test_config.py  test_continuation.py  test_daemon.py  test_daemon_hardening.py  test_daemon_stdin_input.py  test_doctor.py  test_evaluator.py  test_goals_config.py  test_goals_scheduler.py  test_goals_telegram.py  test_graphify_review.py  test_help_parser.py  test_history_command.py  test_hook_config.py  test_hook_runner.py  test_hooks.py  test_improvements.py  test_install_script.py  test_intake_classifier.py  test_lifecycle.py  test_llm.py  test_log_progress_regression.py  test_loop_runner.py  test_mcp_config.py  test_mcp_runtime.py  test_mermaid_docs.py  test_operator_commands.py  test_operator_services.py  test_packaging_sync.py  (+27 more)
(+330 files in other folders)
