[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dormammu"
dynamic = ["version"]
description = "Python-based coding agent loop orchestrator"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
dormammu = "dormammu.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.dynamic]
version = {attr = "dormammu.__version__"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
dormammu = [
  "assets/templates/dev/*.tmpl",
  "assets/frontend/*",
]
