[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dormammu"
dynamic = ["version"]
description = "Python-based coding agent loop orchestrator"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]

[project.scripts]
dormammu = "dormammu.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
dormammu = [
  "assets/templates/dev/*.tmpl",
  "assets/templates/continuation/*.tmpl",
  "assets/agents/AGENTS.md",
  "assets/agents/workflows/*.md",
  "assets/agents/rules/*.md",
  "assets/agents/skills/*/SKILL.md",
  "assets/agents/skills/*/agents/*.yaml",
]
